# internal/pushDemo/docs/swagger.yaml
@@ -15,6 +15,73 @@ info:
   title: Title
   version: "1.0"
 paths:
+  /close_all:
+    post:
+      consumes:
+      - application/x-www-form-urlencoded
+      parameters:
+      - description: 关闭的原因.
+        in: formData
+        name: reason
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.JsonResponse'
+      summary: 关闭所有连接.
+      tags:
+      - close
+  /close_by_bsid:
+    post:
+      consumes:
+      - application/x-www-form-urlencoded
+      parameters:
+      - description: 要关闭哪个连接？
+        in: formData
+        name: bsid
+        required: true
+        type: string
+      - description: 关闭的原因.
+        in: formData
+        name: reason
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.JsonResponse'
+      summary: 关闭指定连接（根据bsid）.
+      tags:
+      - close
+  /close_by_group:
+    post:
+      consumes:
+      - application/x-www-form-urlencoded
+      parameters:
+      - description: 要关闭哪些连接？
+        in: formData
+        name: group
+        required: true
+        type: string
+      - description: 关闭的原因.
+        in: formData
+        name: reason
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.JsonResponse'
+      summary: 关闭指定连接（根据group）.
+      tags:
+      - close
   /close_by_id:
     post:
       consumes:
@@ -37,6 +104,30 @@ paths:
           schema:
             $ref: '#/definitions/types.JsonResponse'
       summary: 关闭指定连接（根据id）.
+      tags:
+      - close
+  /close_by_user:
+    post:
+      consumes:
+      - application/x-www-form-urlencoded
+      parameters:
+      - description: 要关闭哪些连接？
+        in: formData
+        name: user
+        required: true
+        type: string
+      - description: 关闭的原因.
+        in: formData
+        name: reason
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.JsonResponse'
+      summary: 关闭指定连接（根据user）.
       tags:
       - close
   /push_to_all:
